--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -9,7 +9,7 @@
 {% block content %}
 <div class="max-w-md mx-auto">
     <div class="bg-white p-6 rounded-lg shadow-md">
-        <h2 class="text-xl font-bold mb-6 text-center">{% trans "Sign Up" %}</h2>
+        <h2 class="text-xl font-normal mb-6 text-center">{% trans "Sign Up" %}</h2>
 
         <div class="mb-4 text-center">
             {% setvar link %}
@@ -124,7 +124,7 @@
             {{ redirect_field }}
 
             <button type="submit"
-                    class="w-full bg-primary hover:bg-primary/90 text-white font-bold py-3 px-4 rounded-md transition duration-200 focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2">
+                    class="w-full bg-primary hover:bg-primary/90 text-white font-normal py-3 px-4 rounded-md transition duration-200 focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2">
                 {% trans "Sign Up" %}
             </button>
         </form>
